[FER] EPMRDUAITM-302: fix background on horizontal scroll (#328)

--- a/frontend/react/src/index.scss
+++ b/frontend/react/src/index.scss
@@ -38,4 +38,6 @@ h4 {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  min-width: 100vw;
+  width: fit-content;
 }
